--- a/package.json
+++ b/package.json
@@ -6,19 +6,40 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.0.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.13.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "classnames": "^2.5.1",
+    "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.17",
+    "node-sass": "^9.0.0",
+    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-hook-form": "^7.51.3",
+    "react-icons": "^5.1.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5",
+    "resend": "^3.2.0",
+    "uuid": "^9.0.1",
+    "zod": "^3.23.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "prisma": "^5.13.0",
+    "typescript": "^5"
   }
 }
